2006-11-25  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPager.c (list_add):
	make new windows handle allowed actions correctly.

2006-10-08  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmProxy/FvwmProxy.c (FindProxyGroupWithWindowName):
	fix declaration after statement

2006-10-07  Jason Weber  <baboon@imonk.com>
	* FvwmProxy/FvwmProxy.c:
	added window groups and proxy slots

2006-09-19  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmScript/Widgets/List.c (EvtMouseList):
	make sure rectT.height is given a value.

	* FvwmProxy/FvwmProxy.c (ConfigureWindow, IconifyWindow):
	chagned // to /* ... */

	* FvwmProxy/FvwmProxy.c (LinkAction):
	* FvwmIconMan/fvwm.c (property_change):
	silence gcc 4 signedness warning by cast.

	* FvwmDragWell/xdndDragSource.c (xdndSrcDoDrag):
	change mask_return to unsigned.
	silence gcc 4 signedness warning by cast.

	* FvwmWharf/icons.c (LoadIconFile):
	* FvwmWharf/Wharf.h (icon_info):
	* FvwmWharf/FvwmWharf.c (Loop, MapFolde, swallow):
	* FvwmTaskBar/ButtonArray.h (ButtonArray, ButtonDimensions):
	* FvwmTaskBar/ButtonArray.c (ButtonDimensions):
	* FvwmScript/types.h (XObj):
	* FvwmRearrange/FvwmRearrange.c:
	* FvwmIdent/FvwmIdent.c (list_end):
	* FvwmIconBox/FvwmIconBox.h (icon_info):
	* FvwmIconBox/icons.c (GetBackPixmap):
	* FvwmBanner/FvwmBanner.c (PImageIcon):
	change dimensions and allocation counts to unsigned types.

2006-09-12  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmTaskBar/FvwmTaskBar.c (ParseConfigLine):
	correctly handle trailing whitespace after geometry

	* FvwmCommand/FvwmCommand.c (process_message):
	print config_info on separate lines
	* FvwmCommand/FvwmCommandS.c (relay_packet):
	relay 0-length packages.

2006-08-29  Harald Dunkel  <harald.dunkel@t-online.de>

	* FvwmScroll/GrabWindow.c:
	* FvwmScript/Widgets/TextField.c:
	* FvwmScript/Instructions.c:
	* FvwmPager/x_pager.c:
	* FvwmForm/ReadXServer.c:
	* FvwmDragWell/xdndDragSource.c:
	  change offset and length args for XGetWindowProperty() to long